# CPL_NEMO_ELMER

./: README.md  README.txt
BUILD_NEMO_INPUT/: build_bathy_isf_ISOMIP_EXP1_from_STD_grid.f90  build_bathy_isf_ISOMIP_EXP3_from_STD_grid.f90  build_dta_files_ISOMIP_EXP10-13_CPL.f90  build_dta_files_ISOMIP_EXPx_CPL.f90  build_resto_coeff.f90
CM_MISOMIP/: Makefile_G  createRUN.sh
CM_MISOMIP/Scripts/: read_write_Elmer_run_info.sh  run_nemo_ISOMIP.sh  scriptAfterRun.sh  scriptIce1aExecute.sh  scriptIce1aExecute_ORI.sh  scriptIce1r.sh  scriptIce1rExecute.sh  scriptInitDomain.sh  scriptWriteISFDraft.sh  script_EXP1_MISOMIP.sh  script_Exec_MISOMIP.sh  script_RUN_MISOMIP.sh  script_SpinUp_MISOMIP.sh  write_coupling_run_info.sh
CM_MISOMIP/Templates/Sif/: scketchIce1r_SSAStar_fromNEMO.sif  scketchIce1r_SSAStar_fromNEMOBB.sif  scketchIce1r_SSAStar_fromNEMO_Melt_Evolv.sif  scketchIce1r_SSAStar_fromNEMO_Test_Melt_Evolv.sif  scketchInitIce1.sif
CM_MISOMIP/Templates/Slurm/: launchSck.slurm  launchSck_SoloElmer.slurm
CM_MISOMIP/Templates/createRUN/: createRUN_CPL01_MISOMIPr.sh  createRUN_CPL02_TKE_1km_EXP10.sh  createRUN_CPL02_TKE_1km_EXP11.sh  createRUN_CPL02_TKE_1km_EXP12.sh  createRUN_CPL02_TKE_1km_EXP13.sh  createRUN_CPL02_TKE_1km_EXP20.sh  createRUN_CPL02_TKE_1km_EXP22.sh  createRUN_CPL03_MISOMIPr.sh  createRUN_CPL03_TKE_10m_EXP10.sh  createRUN_CPL03_TKE_10m_EXP11.sh  (+23 more)
From_VTK_to_NetCDF/: CMakeLists.txt  fromVTKtoNetcdf.cxx
My_ElmerSolver/: README
NEMO_FILES/: calculate_end_date.f90  calculate_end_date_noleap.f90  calculate_end_date_noleap_month.f90  compress_nemo_GENERIC.sh  rebuild_mesh_mask.sh  rebuild_output_abort.sh
